# server-tools

./: README.md  requirements.txt
attachment_unindex_content/: README.rst
attachment_unindex_content/i18n/: attachment_unindex_content.pot
auditlog/: README.rst  __manifest__.py
auditlog/i18n/: am.po  ar.po  auditlog.pot  bg.po  bs.po  ca.po  cs.po  cs_CZ.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  fr_FR.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  (+31 more)
auditlog/models/: rule.py
auditlog/tests/: test_auditlog.py
autovacuum_message_attachment/: README.rst  __manifest__.py
autovacuum_message_attachment/data/: data.xml
autovacuum_message_attachment/i18n/: autovacuum_mail_message.pot  autovacuum_message_attachment.pot  ca.po  es.po  es_AR.po  fr.po  it.po
autovacuum_message_attachment/models/: autovacuum_mixin.py  vacuum_rule.py
autovacuum_message_attachment/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  ROADMAP.md
autovacuum_message_attachment/tests/: test_vacuum_rule.py
autovacuum_message_attachment/views/: rule_vacuum.xml
base_cron_exclusion/: README.rst  __manifest__.py
base_cron_exclusion/i18n/: base_cron_exclusion.pot  cs_CZ.po  es.po  es_AR.po  fr.po  it.po  zh_CN.po
base_cron_exclusion/models/: ir_cron.py
base_exception/: README.rst  __manifest__.py
base_m2m_custom_field/: README.rst
base_partition/: README.rst
base_technical_user/: README.rst
base_time_window/: README.rst
base_view_inheritance_extension/: README.rst  __manifest__.py
dbfilter_from_header/: README.rst  __manifest__.py
module_change_auto_install/: README.rst  __manifest__.py  patch.py
rpc_helper/: README.rst  __manifest__.py  patch.py  rpc_test_example.py
session_db/: README.rst
setup/_metapackage/: pyproject.toml
test_base_time_window/: README.rst
upgrade_analysis/: README.rst  __manifest__.py  compare.py  upgrade_log.py
(+78 files in other folders)
