[project]
name = "odoo-addons-oca-server-tools"
version = "18.0.20241105.0"
dependencies = [
    "odoo-addon-database_cleanup==18.0.*",
    "odoo-addon-jsonifier==18.0.*",
    "odoo-addon-module_change_auto_install==18.0.*",
    "odoo-addon-onchange_helper==18.0.*",
    "odoo-addon-upgrade_analysis==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
