[project]
name = "odoo-addons-oca-server-tools"
version = "18.0.20241203.0"
dependencies = [
    "odoo-addon-attachment_unindex_content==18.0.*",
    "odoo-addon-base_cron_exclusion==18.0.*",
    "odoo-addon-base_exception==18.0.*",
    "odoo-addon-base_partition==18.0.*",
    "odoo-addon-base_time_window==18.0.*",
    "odoo-addon-base_view_inheritance_extension==18.0.*",
    "odoo-addon-database_cleanup==18.0.*",
    "odoo-addon-dbfilter_from_header==18.0.*",
    "odoo-addon-jsonifier==18.0.*",
    "odoo-addon-module_change_auto_install==18.0.*",
    "odoo-addon-onchange_helper==18.0.*",
    "odoo-addon-rpc_helper==18.0.*",
    "odoo-addon-session_db==18.0.*",
    "odoo-addon-test_base_time_window==18.0.*",
    "odoo-addon-upgrade_analysis==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
